:lipstick: Melhorar descrição das regras circuito

--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -48,6 +48,12 @@
     text-align: left;
   }
 
+  main > p a,
+  main > p a:visited {
+    font-weight: 400;
+    color: var(--color-primary-pure);
+  }
+
   ul {
     display: flex;
     flex-direction: column;
