--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -1,5 +1,3 @@
-
-
 <div id="torneios" class="group">
   <h2>Próximos Torneios</h2>
   <ul class="events">
@@ -10,12 +8,17 @@
         <p class="separator">―</p>
       {% endif %}
 
-      {% if date_format_prev != date_format %}   
+      {% if date_format_prev != date_format %}
+        {% if forloop.first != true %}
+            </ul>
+          </li>
+        {% endif %}
+
       <li id="{{ event.date | date: "%Y-%m-%d" }}" class="date" data-date="{{ event.date | date: "%Y-%m-%d" }}">
         <h3 class="date">{{ date_format }}</h3>
+        <ul class="events-date" >
       {% endif %}
 
-        <ul>
           <li class="event" 
             data-game="{{ category }}"
             data-date="{{ event.date | date: "%Y-%m-%d" }}"
@@ -38,16 +41,16 @@
               {% endfor %}
             </div>
           </li>
-        </ul>
 
-    {% assign week_day_prev = week_day %}
-    {% assign month_day_prev = month_day %}
-    {% assign date_format_prev = date_format %}
+      {% assign week_day_prev = week_day %}
+      {% assign month_day_prev = month_day %}
+      {% assign date_format_prev = date_format %}
 
-    {% if date_format_prev != date_format %}
-      </li>
-    {% endif %}
-
+      {% if forloop.last %}
+          </ul>
+        </li>
+      {% endif %}
+    
     {% endfor %}
   </ul>
 </div>
