--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -98,12 +98,17 @@
 
   table th,
   table td {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   table th {
+    font-weight: 500;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  table td {
+    font-weight: 300;
   }
 </style>
 
