--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,6 +110,17 @@
       z-index: -1;
     }
 
+    picture.logo {
+      width: 250px;
+      height: 100px;
+
+      & img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
     iframe {
       display: block;
       max-width: 600px;
