--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -5,7 +5,7 @@
       {% include event_treated.html %}
 
       {% if week_day <= week_day_prev and month_day != month_day_prev %}
-        <p class="separator">―</p>
+        <p class="separator">―  &bigstar; ―</p>
       {% endif %}
 
       {% if date_format_prev != date_format %}
