:sparkles: link para setores de páginas

--- a/_includes/list_stores.html
+++ b/_includes/list_stores.html
@@ -1,5 +1,5 @@
 <div id="lojas" class="group">
-  <h2>Lojas</h2>
+  <h2>Lojas <a href="#lojas" class="internal-link">#</a></h2>
   <ul>
     {% for post in stores reversed %}
     <li>
