--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -20,6 +20,10 @@
   span.game {
     display: none;
   }
+
+  div#lojas {
+    margin-top: 2rem;
+  }
 </style>
 
 {% assign posts = site.posts | where: "categories", page.game %} {% assign
