--- a/_includes/head.html
+++ b/_includes/head.html
@@ -139,6 +139,15 @@
       text-align: center;
     }
 
+    h2 a.internal-link {
+      font-size: 80%;
+      opacity: 0;
+    }
+
+    h2:hover a.internal-link {
+      opacity: 1;
+    }
+
     h3 {
       font-size: 2.5rem;
       text-align: center;
