--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -44,7 +44,7 @@ events = posts | where: "layout", "event" %} {% assign stores = posts | where:
       <p class="description">{{ page.description }}</p>
     </div>
 
-    {% include next_events.html %} {% include list_stores.html %}
+    <!-- {% include next_events.html %} {% include list_stores.html %} -->
   </main>
 
   {% include footer.html %}
