--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -53,7 +53,8 @@
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
     ></iframe>
-    {% endif %} {% include next_events.html %}
+
+    <!-- {% endif %} {% include next_events.html %} -->
   </main>
 
   {% include footer.html %}
