--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -1,7 +1,7 @@
 <div id="torneios" class="group">
-  <h2>Próximos Torneios <a href="#torneios" class="internal-link">#</a> </h2>
+  <h2>Próximos Torneios <a href="#torneios" class="internal-link">#</a></h2>
   <ul class="events">
-    {% for event in events reversed %}
+    <!-- {% for event in events reversed %}
       {% include event_treated.html %}
 
       {% if week_day <= week_day_prev and month_day != month_day_prev %}
@@ -53,6 +53,6 @@
         </li>
       {% endif %}
     
-    {% endfor %}
+    {% endfor %} -->
   </ul>
 </div>
