:test_tube: testando remoção completa de eventos

--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -54,7 +54,7 @@
       referrerpolicy="no-referrer-when-downgrade"
     ></iframe>
 
-    {% endif %} {% include next_events.html %}
+    {% endif %}
   </main>
 
   {% include footer.html %}
