--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -113,13 +113,13 @@
 </style>
 
 <body>
-  <img class="background" src="/images/double_typhoon.webp" alt="" />
+  <img class="background" src="/images/double_typhoon.webp" alt="">
 
   {% include header.html %}
 
   <main class="home">
     <picture class="logo">
-      <img src="/logos/{{ page.logo }}" alt="logo {{ page.title }}" />
+      <img src="/logos/{{ page.logo }}" alt="logo {{ page.title }}">
     </picture>
 
     <h1>{{ page.title }}</h1>
