--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
 </style>
 
 <body>
-  <img class="background" src="/images/represa_rio_preto.webp" alt="" />
+  <img class="background" src="/images/represa_rio_preto.webp" alt="">
 
   {% include header.html %}
 
