--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
   function gtag() {
     dataLayer.push(arguments)
   }
-  gtag("js", new Date())
-  gtag("config", "G-2BC41VFFE7")
+  gtag('js', new Date())
+  gtag('config', 'G-2BC41VFFE7')
 </script>
 
 <script>
@@ -24,12 +24,12 @@
     return Math.round((second - first) / (1000 * 60 * 60 * 24))
   }
 
-  document.querySelectorAll(".date").forEach((event, index) => {
+  document.querySelectorAll('.date').forEach((event, index) => {
     const eventDate = new Date(event.dataset.date)
     const days = diff(today, eventDate)
 
     if (days < -1) {
-      event.style.display = "none"
+      event.style.display = 'none'
     }
   })
 </script>
