--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,63 +1,64 @@
 <head>
-  <meta charset="UTF-8" />
-  <meta name="robots" content="index, follow" />
+  <meta charset="UTF-8">
+  <meta name="robots" content="index, follow">
 
   {% assign title = page.title %}
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  {% if page.layout == "event" %} {% assign title = game_name | append: " • " |
-  append: date_format | append: " • " | append: page.store %} {% endif %}
+  {% if page.layout == 'event' %}
+    {% assign title = game_name | append: ' • ' | append: date_format | append: ' • ' | append: page.store %}
+  {% endif %}
 
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  {% if title %} {% assign title = title | append: " | " %} {% endif %}
+  {% if title %} {% assign title = title | append: ' | ' %} {% endif %}
 
-  <meta name="theme-color" content="#991f1c" />
+  <meta name="theme-color" content="#991f1c">
 
   {% assign title = title | append: site.title %}
 
   <title>{{ title }}</title>
-  <meta name="name" content="{{ title }}" />
-  <meta name="description" content="{{ site.description }}" />
+  <meta name="name" content="{{ title }}">
+  <meta name="description" content="{{ site.description }}">
 
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="website">
   <meta
     property="og:url"
     content="{{ site.url }}{{ site.baseurl }}{{page.url}}"
-  />
-  <meta property="og:title" content="{{ title }}" />
-  <meta property="og:description" content="{{ site.description }}" />
+  >
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ site.description }}">
 
-  {% assign thumbnail = site.url | append: site.baseurl | append:
-  "/images/thumbnail.jpg" %} {% if page.thumbnail %} {% assign thumbnail =
-  site.url | append: site.baseurl | append: "/images/" | append: page.thumbnail
-  %} {% endif %}
+  {% assign thumbnail = site.url | append: site.baseurl | append: '/images/thumbnail.jpg' %}
+  {% if page.thumbnail %}
+    {% assign thumbnail = site.url | append: site.baseurl | append: '/images/' | append: page.thumbnail %}
+  {% endif %}
 
-  <meta property="og:image" content="{{ thumbnail }}" />
+  <meta property="og:image" content="{{ thumbnail }}">
 
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta
     name="twitter:url"
     content="{{ site.url }}{{ site.baseurl }}{{page.url}}"
-  />
-  <meta name="twitter:title" content="{{ title }}" />
-  <meta name="twitter:description" content="{{page.description}}" />
-  <meta name="twitter:image" content="{{ thumbnail }}" />
+  >
+  <meta name="twitter:title" content="{{ title }}">
+  <meta name="twitter:description" content="{{page.description}}">
+  <meta name="twitter:image" content="{{ thumbnail }}">
 
-  <meta name="locale" property="og:locale" content="pt_BR" />
-  <meta name="keywords" content="{{ page.keywords }}" />
+  <meta name="locale" property="og:locale" content="pt_BR">
+  <meta name="keywords" content="{{ page.keywords }}">
 
   <link
     rel="icon"
     href="{{ site.url }}{{ site.baseurl }}/favicon.ico"
     type="image/ico"
-  />
+  >
   <link
     rel="icon"
     href="{{ site.url }}{{ site.baseurl }}/favicon-32x32.png"
     type="image/png"
-  />
+  >
 
   <style>
     /* Reset CSS */
@@ -71,8 +72,8 @@
     }
 
     html {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
     }
 
     ul {
@@ -129,7 +130,7 @@
       border: none;
       margin-top: 2rem;
 
-      background-image: url("/images/map_placeholder.png");
+      background-image: url('/images/map_placeholder.png');
       background-size: cover;
     }
 
