--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
   <a href="/">
-    <img class="icon" src="/android-chrome-192x192.png" />
+    <img class="icon" src="/android-chrome-192x192.png" alt="">
   </a>
 </header>
