--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -1,58 +1,64 @@
 <div id="torneios" class="group">
   <h2>Próximos Torneios <a href="#torneios" class="internal-link">#</a></h2>
   <ul class="events">
-    <!-- {% for event in events reversed %}
+    {% for event in events reversed %}
       {% include event_treated.html %}
 
       {% if week_day <= week_day_prev and month_day != month_day_prev %}
-        <p class="separator">―  &bigstar; ―</p>
+        <p class="separator">― &bigstar; ―</p>
       {% endif %}
 
       {% if date_format_prev != date_format %}
         {% if forloop.first != true %}
-            </ul>
+          </ul>
           </li>
         {% endif %}
 
         <li id="{{ event.date | date: "%Y-%m-%d" }}" class="date" data-date="{{ event.date | date: "%Y-%m-%d" }}">
           <h3 class="date">{{ date_format }}</h3>
-          <ul class="events-date" >
+          <ul class="events-date">
       {% endif %}
 
-          <li class="event" 
-            data-game="{{ category }}"
-            data-date="{{ event.date | date: "%Y-%m-%d" }}"
-            data-store="{{ store.title }}"
-          >
-            <a href="{{ event.url | relative_url }}">
-              <h4>{{ event.date | date: "%H:%M" }}</h4>
-            </a>
+      <li
+        class="event"
+        data-game="{{ category }}"
+        data-date="{{ event.date | date: "%Y-%m-%d" }}"
+        data-store="{{ store.title }}"
+      >
+        <a href="{{ event.url | relative_url }}">
+          <h4>{{ event.date | date: '%H:%M' }}</h4>
+        </a>
 
-            <a href="/{{ category }}">
-              {% for game_page in game_pages %}
-                <p><span class="game">{{ game_page.title }}{% if event.type  %} • {% endif %}</span>{{ event.type }}</p>
-              {% endfor %}
-            </a>
+        <a href="/{{ category }}">
+          {% for game_page in game_pages %}
+            <p>
+              <span class="game">
+                {{- game_page.title -}}
+                {%- if event.type %} • {% endif -%}
+              </span>
+              {{- event.type }}
+            </p>
+          {% endfor %}
+        </a>
 
-            <div class="store">
-              {% for store in stores_event reversed %}
-                <a href="{{ store.url | relative_url }}">
-                  <p class="store">{{ store.title }}</p>
-                  <small class="store">{{ store.city }}</small>
-                </a>
-              {% endfor %}
-            </div>
-          </li>
+        <div class="store">
+          {% for store in stores_event reversed %}
+            <a href="{{ store.url | relative_url }}">
+              <p class="store">{{ store.title }}</p>
+              <small class="store">{{ store.city }}</small>
+            </a>
+          {% endfor %}
+        </div>
+      </li>
 
       {% assign week_day_prev = week_day %}
       {% assign month_day_prev = month_day %}
       {% assign date_format_prev = date_format %}
 
       {% if forloop.last %}
-          </ul>
+        </ul>
         </li>
       {% endif %}
-    
-    {% endfor %} -->
+    {% endfor %}
   </ul>
 </div>
