--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -4,7 +4,7 @@
     {% for event in events reversed %}
       {% include event_treated.html %}
 
-      {% if week_day <= week_day_prev and month_day != month_day_prev %}
+      {% if week_day <= week_day_prev and month_day != month_day_prev or month_number != month_number_prev %}
         <p class="separator">― • ―</p>
       {% endif %}
 
@@ -51,6 +51,7 @@
 
       {% assign week_day_prev = week_day %}
       {% assign month_day_prev = month_day %}
+      {% assign month_number_prev = month_number %}
       {% assign date_format_prev = date_format %}
 
       {% if forloop.last %}
