--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -113,7 +113,7 @@
 </style>
 
 <body>
-  <img class="background" src="/images/double_typhoon.webp" alt="">
+  <img class="background" src="/backgrounds/digimon.webp" alt="">
 
   {% include header.html %}
 
