--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   {% if page.layout == 'event' %}
-    {% assign title = game_name | append: ' • ' | append: date_format | append: ' • ' | append: page.store %}
+    {% assign title = game.title | append: ' • ' | append: date_format | append: ' • ' | append: page.store %}
   {% endif %}
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -105,7 +105,7 @@
       object-fit: cover;
       position: fixed;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       opacity: 0.15;
 
       z-index: -1;
@@ -160,7 +160,7 @@
     }
 
     h4 {
-      font-size: 1.5rem;
+      font-size: 2.25rem;
       text-align: center;
     }
 
