--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -1,4 +1,5 @@
 {% include head.html %}
+
 <style>
   main.home {
     display: flex;
@@ -113,7 +114,7 @@
 </style>
 
 <body>
-  <img class="background" src="/backgrounds/digimon.webp" alt="">
+  <img class="background" src="/backgrounds/{{ page.game }}.webp" alt="">
 
   {% include header.html %}
 
