--- a/_includes/head.html
+++ b/_includes/head.html
@@ -134,6 +134,11 @@
       background-size: cover;
     }
 
+    h1 {
+      font-size: 2.25rem;
+      text-align: center;
+    }
+
     h2 {
       font-size: 2.75rem;
       font-weight: 400;
@@ -151,6 +156,7 @@
 
     h3 {
       font-size: 2.5rem;
+      line-height: 2.75rem;
       text-align: center;
     }
 
@@ -226,6 +232,10 @@
 
     ul.events-date {
       gap: 2.5rem;
+    }
+
+    div#lojas ul {
+      gap: 1.5rem;
     }
 
     li {
